--- a/CarWashAsp.Net/Views/Home/Index.cshtml
+++ b/CarWashAsp.Net/Views/Home/Index.cshtml
@@ -1,8 +1,3 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<h1>Log In</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Geral">Logar</a>
