--- a/CarWashAsp.Net/Views/Dashboard/Geral.cshtml
+++ b/CarWashAsp.Net/Views/Dashboard/Geral.cshtml
@@ -42,7 +42,7 @@
                         <td>@agendamento.DataAgendamento.ToString("dd/MM/yyyy")</td>
                         <td>@agendamento.Preco MZ</td>
                         <td>
-                            <button href="@Url.Action("EditarAgendamento", "Dashboard", new { id = agendamento.Id})" class="edit-btn" onclick="editAppointment(this)">Editar</button>
+                            <button  class="edit-btn" onclick="editAppointment(this)">Editar</button>
                             <a href="@Url.Action("RemoverAgendamento", "Dashboard", new { id = agendamento.Id })" class="delete-btn" style="text-decoration:none">Remover</a>
                             @if(agendamento.Status == "Pendente")
                             {
@@ -54,44 +54,4 @@
             </tbody>
         </table>
     </section>
-    <!-- Modal para Novo Agendamento -->
-    <div id="appointmentModal" class="modal">
-        <div class="modal-content">
-            <span class="close" id="closeModal">&times;</span>
-            <h2>Novo Agendamento</h2>
-            <form id="appointmentForm">
-                <input type="hidden" id="idAgendamento" name="idAgendamento" />
-
-                <label for="nomeCliente">Nome do Cliente:</label>
-                <input type="text" id="nomeCliente" name="nomeCliente" required>
-
-                <label for="placaCarro">Placa do Carro:</label>
-                <input type="text" id="placaCarro" name="placaCarro" required>
-
-                <label for="descricao">Descrição:</label>
-                <input type="text" id="descricao" name="descricao" required>
-
-                <label for="data">Data:</label>
-                <input type="date" id="data" name="data" required>
-
-                <label for="plano">Plano:</label>
-                <select id="plano" name="plano">
-                    <option value="Leve">Leve</option>
-                    <option value="Pesado">Pesado</option>
-                </select>
-
-                <label for="servico">Tipo de Serviço:</label>
-                <select id="servico" name="servico">
-                    <option value="Polimento">Polimento</option>
-                    <option value="LavagemSimples">LavagemSimples</option>
-                    <option value="LavagemCompleta">LavagemCompleta</option>
-                </select>
-
-                <label for="preco">Preço:</label>
-                <input type="text" id="preco" name="preco" readonly>
-
-                <button type="submit" id="submitAppointment">Agendar</button>
-            </form>
-        </div>
-    </div>
 </div>
