--- a/CarWashAsp.Net/wwwroot/css/estilo.css
+++ b/CarWashAsp.Net/wwwroot/css/estilo.css
@@ -83,10 +83,24 @@ header {
         color: #2c3e50;
     }
 
+.btn-prod {
+    gap:15px;
+}
+
 .add-btn {
     padding: 10px 20px;
     background-color: #1abc9c;
     color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.rmQuantidade-btn {
+    color: white;
+    background-color: #e74c3c; 
+    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -184,7 +198,7 @@ table {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal-content {
